--- a/index.html
+++ b/index.html
@@ -50,14 +50,16 @@
 
 
 
-      <a href="https://nith.ac.in/" class="logo"><img src="https://nith.ac.in/uploads/settings/15795036012617.png"
-          alt="logo" class="img-fluid"></a>
+      <a href="https://nith.ac.in/" class="logo">
+        <!-- <img src="https://nith.ac.in/uploads/settings/15795036012617.png"
+          alt="logo" class="img-fluid"> -->
+        </a>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About Us</a></li>
-          <li><a class="nav-link scrollto" href="#services">Conference</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#services">Conference</a></li> -->
           <li><a class="nav-link scrollto" href="workshop.html">Workshop</a></li>
           <li><a class="nav-link scrollto" href="#pricing">Registration</a></li>
           <li><a class="nav-link scrollto" href="#updates">Updates</a></li>
