--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
 
       <a href="https://nith.ac.in/" class="logo">
-        <!-- <img src="https://nith.ac.in/uploads/settings/15795036012617.png"
-          alt="logo" class="img-fluid"> -->
+        <img src="./assets/img/nith-logo.png"
+          alt="logo" class="img-fluid">
         </a>
 
       <nav id="navbar" class="navbar">
@@ -200,7 +200,8 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <img src="./assets/img/nith_gate.jpg" alt="NITH" width="540" height="405">
+            <img src="./assets/img/nith_gate.jpg" alt="NITH" width="100%" height="auto">
+
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <h2>Department</h2>
