--- a/workshop.html
+++ b/workshop.html
@@ -49,7 +49,7 @@
 
 
       <a href="https://nith.ac.in/" class="logo">
-        <!-- <img src="https://nith.ac.in/uploads/settings/15795036012617.png"alt="logo" class="img-fluid"> -->
+        <img src="./assets/img/nith-logo.png"alt="logo" class="img-fluid">
       </a>
 
       <nav id="navbar" class="navbar">
