--- a/workshop.html
+++ b/workshop.html
@@ -49,18 +49,28 @@
 
 
       <a href="https://nith.ac.in/" class="logo">
-        <img src="./assets/img/nith-logo.png"alt="logo" class="img-fluid">
+        <img src="./assets/img/nith-logo.png" alt="logo" class="img-fluid">
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About Us</a></li>
-          <li><a class="nav-link scrollto" href="./index.html">Conference</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Events
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="workshop.html">Workshop</a></li>
+              <!-- <li><hr class="dropdown-divider"></li> -->
+              <li><a class="dropdown-item" href="index.html">Conference</a></li>
+              <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
+            </ul>
+          </li>
           <!-- <li><a class="nav-link scrollto" href="workshop.html">Workshop</a></li> -->
           <li><a class="nav-link scrollto" href="#pricing">Registration</a></li>
-          <li><a class="nav-link scrollto" href="#updates">Updates</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#updates">Updates</a></li>
+          <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -76,11 +86,11 @@
 
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">epaHybrid Workshop</h2>
+          <h2 class="animate__animated animate__fadeInDown">Hybrid Workshop</h2>
           <p class="animate__animated animate__fadeInDown">on</p>
           <h2 class="animate__animated animate__fadeInDown">“Scale Development and Impactful Publication in Social
             Sciences”</h2>
-          <p class="animate__animated animate__fadeInUp">Organized by <br> An Initiative of Department of Management
+          <p class="animate__animated animate__fadeInUp">Organized by <br> Department of Management
             Studies <br>National
             Institute of Technology Hamirpur
           <h2 class="animate__animated animate__fadeInUp"> Date: 19.07.2023 & 23.07.2023</h2>
@@ -116,12 +126,18 @@
               <p class="description">
                 Number of participants is limited for this Workshop. Applications will be accepted on first cum-first
                 serve basis.
-                <br><strong>Last date: 15th July, 2023.</strong>
+              </p>
+              <p class="description"><br><strong>Certificates</strong>
+              <br>Certificates will be provided to the participants, with at least 80% attendance, upon successful
+              completion of the program
+              <br>
+              <br>Last date of Registration:<br><strong> 15th July, 2023.</strong>
 
               </p>
+
             </div>
           </div>
-          
+
 
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="200">
@@ -131,13 +147,14 @@
               <p class="description">
                 <b>Patron:</b> <br>Prof. (Dr.) H.M. Suryawanshi, Director, NIT Hamirpur<br>
                 <b>Organizing Chairman:</b><br> Prof. (Dr.) RK Dutta, NIT Hamirpur<br>
-                <b>Organizing Secretary (s):</b> <br>Dr. Shampy Kamboj, NIT Hamirpur <br> Dr. Mohd. Adil, NIT Hamirpur
+                <b>Organizing Coordinator (s):</b> <br> Dr. Mohd. Adil<br> Dr. Vivek Tiwari
+
                 <br>
-                <b>Treasurer:</b><br> Dr. Vivek Tiwari, NIT Hamirpur
+                <b>Treasurer:</b><br> Dr. Shampy Kamboj
               </p>
             </div>
           </div>
-          
+
           <!-- Registration -->
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="300">
@@ -160,11 +177,14 @@
                 </li>
               </ul>
               </p>
-              <center>
+              <!-- <center>
                 <div class="pricing btn-wrap">
                   <a href="#pricing" class="btn-buy">Register</a>
                 </div>
-              </center>
+              </center> -->
+              <p class="description"><br><strong>Who can participate?</strong><br>
+                Faculty Members, Research Scholars, Post-graduate & 
+                Graduate students, Industry professionals</p>
             </div>
           </div>
           <div class="d-flex align-items-stretch mb-5 mb-lg-0 pt-4" data-aos="fade-up">
@@ -347,7 +367,7 @@
       </div>
 
     </section>
-    <!-- <section id="pricing" class="pricing">
+    <section id="pricing" class="pricing">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -356,20 +376,30 @@
             The registration fee is non-refundable.
           </p>
           <p>
-            Should be paid through SBI collect in the following manner:<br>
+            To pay through SBI Collect via select the following options<br>
             Click <i class="bi bi-arrow-right"></i> SBI collect <i class="bi bi-arrow-right"></i> Educational
             institutions <i class="bi bi-arrow-right"></i>Himachal Pradesh <i class="bi bi-arrow-right"></i>NIT
             Hamirpur<i class="bi bi-arrow-right"></i> Workshop/STC/FDP/Conference.<br> <br>Register after payment using
-            the link <a href="https://forms.gle/LFdjKcF3iUuGedQ6"> https://forms.gle/LFdjKcF3iUuGedQ6 </a>
+            the link <a href="https://forms.gle/ZgJm3vWxh28LAXbE9"> https://forms.gle/ZgJm3vWxh28LAXbE9 </a>
           </p>
         </div>
 
         <div class="row">
 
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="box featured">
+              <h3>Ph D. Scholars/Students</h3>
+              <h4><sup>Rs</sup>500<span> + 2%<br> transaction charges</span></h4>
+              <div class="btn-wrap">
+                <a href="https://www.onlinesbi.sbi/sbicollect/" class="btn-buy">Register</a>
+              </div>
+            </div>
+          </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="box featured">
               <h3>Academia/R&D</h3>
-              <h4><sup>Rs</sup>1000<span></span></h4>
+              <h4><sup>Rs</sup>1000<span> + 2%<br> transaction charges</span></h4>
+
               <div class="btn-wrap">
                 <a href="https://www.onlinesbi.sbi/sbicollect/" class="btn-buy">Register</a>
               </div>
@@ -379,26 +409,18 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="box featured">
               <h3>Corporate/Industry </h3>
-              <h4><sup>Rs</sup>2000<span></span></h4>
+              <h4><sup>Rs</sup>1500<span> + 2%<br> transaction charges</span></h4>
               <div class="btn-wrap">
                 <a href="https://www.onlinesbi.sbi/sbicollect/" class="btn-buy">Register</a>
               </div>
             </div>
-          </div>
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="box featured">
-              <h3>Ph D. Scholars/Students</h3>
-              <h4><sup>Rs</sup>500<span></span></h4>
-              <div class="btn-wrap">
-                <a href="https://www.onlinesbi.sbi/sbicollect/" class="btn-buy">Register</a>
-              </div>
-            </div>
+
           </div>
         </div>
 
       </div>
-    </section> -->
+    </section>
     <!-- <section id="updates" class="portfoio">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
@@ -464,7 +486,7 @@
 
       </div>
     </section> -->
-   <section id="contact" class="contact">
+    <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -485,9 +507,15 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <a href="mailto:amrit.doms.nith@gmail.com"><p>amrit.doms.nith@gmail.com</p></a>
-                <a href="mailto:shampy@nith.ac.in"><p>shampy@nith.ac.in</p></a>
-                <a href="mailto:adil.dms@nith.ac.in"><p>adil.dms@nith.ac.in</p></a>
+                <a href="mailto:amrit.doms.nith@gmail.com">
+                  <p>amrit.doms.nith@gmail.com</p>
+                </a>
+                <a href="mailto:shampy@nith.ac.in">
+                  <p>shampy@nith.ac.in</p>
+                </a>
+                <a href="mailto:adil.dms@nith.ac.in">
+                  <p>adil.dms@nith.ac.in</p>
+                </a>
               </div>
 
               <div class="phone">
@@ -511,7 +539,7 @@
         </div>
 
       </div>
-    </section> 
+    </section>
   </main>
 
 
@@ -534,6 +562,8 @@
       class="bi bi-arrow-up-short"></i></a>
 
   <script src="assets/vendor/aos/aos.js"></script>
+  <script src="forms/contact-us.js"></script>
+
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
