--- a/workshop.html
+++ b/workshop.html
@@ -61,7 +61,7 @@
               Events
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="workshop.html">Workshop</a></li>
+              <li><a class="dropdown-item" href="#">Workshop</a></li>
               <!-- <li><hr class="dropdown-divider"></li> -->
               <li><a class="dropdown-item" href="index.html">Conference</a></li>
               <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
