--- a/workshop.html
+++ b/workshop.html
@@ -260,8 +260,8 @@
           <h2>Workshop</h2>
           <p>Much of the quantitative research in management and social sciences deals with latent constructs - their
             operationalization, and their inter-relationships. The operationalization process predominantly involves
-            either development of measure(s) for new construct(s) or refinement of existing measure(s) for given
-            construct(s). This workshop intends to cover both of these aspects with special focus on developing new
+            either development of measure for new construct or refinement of existing measure for given
+            construct. This workshop intends to cover both of these aspects with special focus on developing new
             measures.
             The motivation behind conducting this workshop is based on the philosophy that in a research anything can be
             measured and can be managed effectively. In the development of a scale, we start from an abstract phenomenon
@@ -502,72 +502,7 @@
       </div>
 
     </section>
-    <!-- <section id="updates" class="portfoio">
-      <div class="container" data-aos="fade-up">
-        <div class="section-title">
-          <h2>Updates</h2>
-          <p>List of current events</p>
-        </div>
-       
-           <div id="latest"></div> 
-
-      </div>
-    </section> -->
-    <!-- <section id="team" class="team section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Committees</h2>
-          <p>Organizing Committee</p>
-        </div>
-        <div class="row" id="newTeam">
-          <div class="col-lg-10 mt-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/dir.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Prof. (Dr.) H.M. Suryawanshi</h4>
-                <span>Director, NIT Hamirpur</span>
-                <p>Patron</p>
-                <p>The marketing domain has embraced technology to adapt to the ever-changing dynamics of business. The
-                  AMRIT-2023 National Conference will help businesses gain a competitive edge and lead in an
-                  ever-changing industry ecosystem. Furthermore, AMRIT-2023 brings together leading experts,
-                  practitioners, and academics from the marketing & technology ecosystem - brand agencies, digital
-                  marketing, cutting-edge technology, marketers, technology evangelists, and experts, powering the next
-                  generation of marketing. We expect that all submissions must be of high quality, rigorous, and novel
-                  in their approach from the allied domains of management and technology.We extend our heartfelt thanks
-                  to the Patron, Chairman, Dean (FW), NITH and registrar NITH for allowing us to organize AMRIT-2023
-                  with in a such a short span of time. The marketing domain has embraced technology to cope with the
-                  ever-changing dynamics of the business. " Advances in marketing paradigms for research, innovation &
-                  technology’" would assist businesses develop their competitive edge and lead in the ever-changing
-                  industry ecosystem. Further AMRIT-2023 brings together leading experts, practitioners, and
-                  academicians in the marketing & technology ecosystem - brand agencies, digital agencies, new age
-                  technology companies, marketers, technology evangelists, experts, and platforms powering the next
-                  generation of the Marketing and other allied domains. We expect all submissions to be reach in
-                  quality, rigorous and novel in its approach from allied domains of management and technology.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="section-title">
-
-        </div>
-       
-        <div class="section-title">
-          <p>Conference Advisory Committee</p>
-        </div>
-        <div class="row" id="advisoryMembers"></div>
-        <div class="section-title">
-
-          <div class="btn-wrap">
-            <a href="messages.html" class="btn-buy">Message From Committee</a>
-          </div>
-        </div>
-
-
-      </div>
-    </section> -->
-    <section id="contact" class="contact">
+   <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
