form link updated

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 NIT Hamirpur <i class="bi bi-arrow-right-short"></i> Workshop/STC/FDP/Conference.
                 Register after payment using the link
                 <!-- <div class="breakword"> -->
-                <a href="https://forms.gle/LFdjKcF3iUuGedQ6">https://forms.gle/LFdjKcF3iUuGedQ6</a>
+                <a href="https://forms.gle/g4Pt1VfYYV3SUCMM9">https://forms.gle/g4Pt1VfYYV3SUCMM9</a>
                 <!-- </div> -->
               </p>
             </div>
@@ -420,7 +420,7 @@
             Click <i class="bi bi-arrow-right"></i> SBI collect <i class="bi bi-arrow-right"></i> Educational
             institutions <i class="bi bi-arrow-right"></i>Himachal Pradesh <i class="bi bi-arrow-right"></i>NIT
             Hamirpur<i class="bi bi-arrow-right"></i> Workshop/STC/FDP/Conference.<br> <br>Register after payment using
-            the link <a href="https://forms.gle/LFdjKcF3iUuGedQ6"> https://forms.gle/LFdjKcF3iUuGedQ6 </a>
+            the link <a href="https://forms.gle/g4Pt1VfYYV3SUCMM9"> https://forms.gle/g4Pt1VfYYV3SUCMM9 </a>
           </p>
         </div>
 
